--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.6",
+    "@uiw/react-codemirror": "^4.23.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.31",
     "next": "14.2.7",
