--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.6",
+    "@uiw/codemirror-extensions-langs": "^4.23.0",
+    "@uiw/codemirror-theme-dracula": "^4.23.0",
     "@uiw/react-codemirror": "^4.23.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.31",
