--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.3.6",
     "@uiw/codemirror-extensions-langs": "^4.23.0",
     "@uiw/codemirror-theme-dracula": "^4.23.0",
+    "@uiw/codemirror-theme-xcode": "^4.23.0",
     "@uiw/react-codemirror": "^4.23.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.31",
